--- a/web/main/assets/css/style.css
+++ b/web/main/assets/css/style.css
@@ -43,21 +43,20 @@ a{
 }
 
 .dietWrapper{
-    display:inline;
-    margin-left: 10%;
+    min-width: 120px;
 }
 
 .foodDesc{
     margin-top: 4px;
     font-size: 9.5px;
-    max-width: 190px;
+    max-width: 300px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 }
 
 .extraInfo{
-    /* text-align: right; */
+    text-align: center;
 }
 
 .rightBox{
@@ -71,6 +70,7 @@ a{
     max-width: 250px;
     display:flex;
     margin: auto;
+    margin-top: 20px;
     justify-content: center;
 }
 
@@ -251,4 +251,29 @@ a{
 }
 .navbar a, .navbar-brand {
     color: white!important;
+}
+.navbar-default .navbar-toggle {
+    border-color: white;
+    background-color: white!important;
+    opacity: 0.7;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #066b0a;
+}
+
+.dateSearchWrapper button {
+    color: #066b0a;
+}
+
+.your-rating {
+    cursor: pointer;
+}
+.your-rating span.glyphicon-star {
+    color: #ddd;
+}
+span.glyphicon-star.on {
+    color: #f4c542;
+}
+.review-panel {
+    display: none;
 }
