Some last minute changes at the hackathon that weren't committed

--- a/web/main/assets/css/style.css
+++ b/web/main/assets/css/style.css
@@ -7,14 +7,19 @@ a{
     text-align: center;
 }
 
+.main-container {
+    margin-bottom:50px;
+}
+
 #locationsDropdown{
-    width: 250px;
+    width: 270px;
     height: 40px;
     font-size: 18px;
 }
 
 #locationsDropdownMenu{
-    width: 250px;
+    width: 270px;
+    font-size: 14px;
 }
 
 #highlighted{
